syntax="proto3";
package order;
option go_package="./pkg/pb";
service OrderService{
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
}
message CreateOrderRequest{
    string userid=1;
    string addressid=2;
}
message CreateOrderResponse{
    int64 status=1;
    string error=2;
    int64 id=3;
}